# rag-agentic-chat-system

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
database/: db_config.py  schema.sql
src/agents/: __init__.py  agent_singleton.py  base_agent.py  coordinator.py  ingestion.py  llm_response.py  retrieval.py
src/api/: main.py
src/api/endpoints/: documents.py  health.py
src/api/endpoints/coordinator/: routes.py  schemas.py
src/api/endpoints/ingestion/: routes.py
src/api/endpoints/mcp/: routes.py  schemas.py
src/api/endpoints/retrieval/: routes.py  schemas.py
src/config/: __init__.py  settings.py
src/mcp/: __init__.py  protocol.py  transport.py
src/mcp/docx/: protocol.md  transport.md
src/models/: __init__.py  document.py  query.py  response.py
src/parsers/: base_parser.py  pdf_parser.py  registry.py
src/services/: document_service.py  llm_service.py  query_service.py
src/vector_store/: __init__.py  base_store.py  chroma_store.py  embeddings.py
tests/: test_document_models.py  test_transport_mcp.py
