[project]
name = "agentic-rag-chatbot"
version = "0.1.0"
description = "An agentic RAG chatbot using Model Context protocals"
authors = [
    { name = "M. Sanjay Uddith Raju", email = "uddithmachiraju@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11" 
dependencies = [
    "fastapi>=0.103.0"
]
